--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
   "repository": "https://github.com/haorama/nestjs-emittery",
   "author": "Michael Lazuardy",
   "license": "MIT",
+  "scripts": {
+    "lint": "eslint \"lib/**/*.ts\" --fix"
+  },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0 || ^8.0.0",
     "@nestjs/core": "^7.0.0 || ^8.0.0"
@@ -15,6 +18,15 @@
   },
   "devDependencies": {
     "@nestjs/common": "^8.0.6",
-    "@nestjs/core": "^8.0.6"
+    "@nestjs/core": "^8.0.6",
+    "@typescript-eslint/eslint-plugin": "^4.31.1",
+    "@typescript-eslint/parser": "^4.31.1",
+    "eslint": "^7.32.0",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.4.1",
+    "rimraf": "^3.0.2",
+    "ts-node": "^10.2.1",
+    "typescript": "^4.4.3"
   }
 }
