--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,13 +8,17 @@
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true,
     "allowJs": true,
-    "target": "es6",
+    "target": "es2017",
     "resolveJsonModule": true,
     "sourceMap": false,
     "outDir": "./dist",
     "rootDir": "lib",
     "esModuleInterop": true,
-    "moduleResolution": "node"
+    "moduleResolution": "node",
+    "skipLibCheck": true,
+    "types": [
+      "node"
+    ]
   },
   "include": ["lib/**/*"],
   "exclude": ["node_modules", "**/*.spec.ts"],
