--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
   "author": "Michael Lazuardy",
   "license": "MIT",
   "scripts": {
-    "lint": "eslint \"lib/**/*.ts\" --fix"
+    "lint": "eslint \"lib/**/*.ts\" --fix",
+    "build": "rimraf -rf dist && tsc -p tsconfig.json"
   },
   "peerDependencies": {
     "@nestjs/common": "^7.0.0 || ^8.0.0",
@@ -19,6 +20,7 @@
   "devDependencies": {
     "@nestjs/common": "^8.0.6",
     "@nestjs/core": "^8.0.6",
+    "@types/node": "^16.9.4",
     "@typescript-eslint/eslint-plugin": "^4.31.1",
     "@typescript-eslint/parser": "^4.31.1",
     "eslint": "^7.32.0",
